[gd_scene load_steps=71 format=3 uid="uid://os8pu43ds3tc"]

[ext_resource type="Script" path="res://Scripts/Enemies/EliteEnemy.gd" id="1_q18po"]
[ext_resource type="Shader" path="res://Scripts/Enemies/EliteEnemy.gdshader" id="1_r8k15"]
[ext_resource type="Texture2D" uid="uid://cdd61gcetfh44" path="res://Art/Characters/EliteEnemy/DragonDeath.png" id="2_f7wkg"]
[ext_resource type="PackedScene" uid="uid://cdxbtkj5u7k1v" path="res://Scenes/Components/HealthComponent.tscn" id="3_3x10y"]
[ext_resource type="Texture2D" uid="uid://boj8jynegw8c1" path="res://Art/Sprites/Elite_enemy.png" id="4_fn4b3"]
[ext_resource type="PackedScene" uid="uid://u343rxod55s" path="res://Scenes/Components/HitboxComponent.tscn" id="5_2kw33"]
[ext_resource type="PackedScene" uid="uid://cptudld2heq8h" path="res://Scenes/Components/HurtboxComponent.tscn" id="6_0wwcd"]
[ext_resource type="PackedScene" uid="uid://c4trest17eiso" path="res://Scenes/Components/HealthBar.tscn" id="8_3f8uv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ym0c"]
shader = ExtResource("1_r8k15")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/draw_outline = true

[sub_resource type="AtlasTexture" id="AtlasTexture_p21ad"]
atlas = ExtResource("2_f7wkg")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vogg6"]
atlas = ExtResource("2_f7wkg")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3fek"]
atlas = ExtResource("2_f7wkg")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_416q6"]
atlas = ExtResource("2_f7wkg")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_073h4"]
atlas = ExtResource("2_f7wkg")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwk8y"]
atlas = ExtResource("2_f7wkg")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce451"]
atlas = ExtResource("2_f7wkg")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh03l"]
atlas = ExtResource("2_f7wkg")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1uvc"]
atlas = ExtResource("2_f7wkg")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic0nh"]
atlas = ExtResource("4_fn4b3")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gisj7"]
atlas = ExtResource("4_fn4b3")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gox3q"]
atlas = ExtResource("4_fn4b3")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqlme"]
atlas = ExtResource("4_fn4b3")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0htj"]
atlas = ExtResource("4_fn4b3")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7rv6"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1024, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw0m3"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1280, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_smduo"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1536, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s3fc"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1792, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mprf"]
atlas = ExtResource("4_fn4b3")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_id6hs"]
atlas = ExtResource("4_fn4b3")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh87b"]
atlas = ExtResource("4_fn4b3")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e73lb"]
atlas = ExtResource("4_fn4b3")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kkge"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1024, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jifxb"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1280, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_maqf0"]
atlas = ExtResource("4_fn4b3")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dih8o"]
atlas = ExtResource("4_fn4b3")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpeqj"]
atlas = ExtResource("4_fn4b3")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gyrd"]
atlas = ExtResource("4_fn4b3")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iambh"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jcia"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_amea8"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4hvd"]
atlas = ExtResource("4_fn4b3")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_djnm4"]
atlas = ExtResource("4_fn4b3")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6myt"]
atlas = ExtResource("4_fn4b3")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o37n4"]
atlas = ExtResource("4_fn4b3")
region = Rect2(2560, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7my8"]
atlas = ExtResource("4_fn4b3")
region = Rect2(2816, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_ohb7u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5m0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic0nh")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gisj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gox3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqlme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0htj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7rv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw0m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smduo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s3fc")
}],
"loop": false,
"name": &"Melee_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mprf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id6hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh87b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e73lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kkge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jifxb")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_maqf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dih8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpeqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gyrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iambh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jcia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amea8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4hvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djnm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6myt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o37n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7my8")
}],
"loop": false,
"name": &"Ranged_attack",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_skdr7"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3h7bf"]
radius = 48.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_nuh0c"]
radius = 6.0

[node name="EliteEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_q18po")

[node name="EliteEnemySprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_5ym0c")
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_ohb7u")
animation = &"Ranged_attack"

[node name="EliteEnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_skdr7")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(2.67741, 2.67741)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_3h7bf")

[node name="EliteEnemyHealth" parent="." instance=ExtResource("3_3x10y")]
Max_health = 500.0

[node name="EliteEnemyHitbox" parent="." node_paths=PackedStringArray("Health") instance=ExtResource("5_2kw33")]
position = Vector2(0, 1)
collision_layer = 4
Health = NodePath("../EliteEnemyHealth")

[node name="EliteEnemyHitCollision" type="CollisionShape2D" parent="EliteEnemyHitbox"]
shape = SubResource("CircleShape2D_skdr7")

[node name="EliteEnemyHurtbox" parent="." instance=ExtResource("6_0wwcd")]
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 2

[node name="EliteEnemyHurtCollision" type="CollisionShape2D" parent="EliteEnemyHurtbox"]
shape = SubResource("CircleShape2D_skdr7")

[node name="DashTimer" type="Timer" parent="."]

[node name="HealthBar" parent="." node_paths=PackedStringArray("Health_component") instance=ExtResource("8_3f8uv")]
offset_left = -45.0
offset_top = 41.0
offset_right = 135.0
offset_bottom = 49.0
Health_component = NodePath("../EliteEnemyHealth")

[node name="EliteLOS" type="RayCast2D" parent="."]
target_position = Vector2(129, 0)
collision_mask = 3

[node name="WaitTimer" type="Timer" parent="."]
[node name="EliteEnemyShield" type="Area2D" parent="." groups=["Shield"]]

[node name="EliteEnemyShieldCollision" type="CollisionShape2D" parent="EliteEnemyShield"]
scale = Vector2(2.82838, 2.82838)
shape = SubResource("CircleShape2D_nuh0c")

[node name="EliteEnemyShieldHitbox" parent="EliteEnemyShield" node_paths=PackedStringArray("Health") instance=ExtResource("5_2kw33")]
collision_layer = 4
Health = NodePath("../EliteEnemyShieldDurability")

[node name="EliteEnemyShieldHitCollision" type="CollisionShape2D" parent="EliteEnemyShield/EliteEnemyShieldHitbox"]
scale = Vector2(2.8742, 2.8742)
shape = SubResource("CircleShape2D_nuh0c")

[node name="EliteEnemyShieldDurability" parent="EliteEnemyShield" instance=ExtResource("3_3x10y")]

[node name="EliteEnemyShieldDurabilityBar" parent="EliteEnemyShield" node_paths=PackedStringArray("Health_component") instance=ExtResource("8_3f8uv")]
offset_left = -45.0
offset_top = 37.0
offset_right = 56.0
offset_bottom = 41.0
scale = Vector2(0.900955, 0.900955)
Health_component = NodePath("../EliteEnemyShieldDurability")

[node name="EliteSFX" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 3
bus = &"sfx"

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
